# napari-psf-analysis-CFIM-edition

./: .gitignore  LICENSE  MANIFEST.in  README.md  cleanup.py  image-test.py  psf_requirements.txt  pyproject.toml  requirements.txt  requirements_lite.txt  setup.cfg  start_plugin.py  tox.ini
docs/source/: conf.py
src/napari_psf_analysis_CFIM/: _dock_widget.py  czi_reader_CFIM.py  napari.yaml
src/napari_psf_analysis_CFIM/_tests/: test_dock_widget.py
src/napari_psf_analysis_CFIM/_tests/psf_analysis/: test_analyzer.py  test_psf.py  test_utils.py
src/napari_psf_analysis_CFIM/_tests/psf_analysis/extract/: test_BeadExtractor.py
src/napari_psf_analysis_CFIM/_tests/psf_analysis/fit/: test_fit_1d.py  test_fit_2d.py  test_fit_3d.py  test_fitter.py
src/napari_psf_analysis_CFIM/psf_analysis/: analyzer.py  bead_visualiser.py  psf.py  sample.py
src/napari_psf_analysis_CFIM/psf_analysis/extract/: BeadExtractor.py
src/napari_psf_analysis_CFIM/psf_analysis/fit/: estimator.py  fitter.py
src/psf_analysis_CFIM/: _dock_widget.py  bead_finder_CFIM.py  czi_metadata_processor.py  czi_reader_CFIM.py  error_display_widget.py  image_selector_dropdown.py  mounting_medium_selector.py  napari.yaml  plot_comparison.py  points_dropdown.py  range_indicator_button.py  range_indicator_colormap.py
src/psf_analysis_CFIM/_tests/: test_dock_widget.py
src/psf_analysis_CFIM/_tests/psf_analysis/: test_analyzer.py  test_psf.py  test_utils.py
src/psf_analysis_CFIM/_tests/psf_analysis/extract/: test_BeadExtractor.py
src/psf_analysis_CFIM/_tests/psf_analysis/fit/: test_fit_1d.py  test_fit_2d.py  test_fit_3d.py  test_fitter.py
src/psf_analysis_CFIM/config/: settings_model.py  settings_widget.py
src/psf_analysis_CFIM/czi_reader/: czi_metadata_processor.py  czi_reader_CFIM.py
src/psf_analysis_CFIM/debug/: debug.py
src/psf_analysis_CFIM/debug/saved_debug_info/: debug_0.txt
src/psf_analysis_CFIM/error_widget/: error_display_widget.py
src/psf_analysis_CFIM/library_workarounds/: MultiKeyDict.py  QDualSeperatorValidator.py  QLineEditWithColormapBg.py  QPushButton.py  RangeDict.py
src/psf_analysis_CFIM/psf_analysis/: analyzer.py  image.py  image_analysis.py  image_statistics.py  psf.py  records.py  sample.py
src/psf_analysis_CFIM/psf_analysis/extract/: BeadExtractor.py
src/psf_analysis_CFIM/psf_analysis/fit/: estimator.py  fitter.py
src/psf_analysis_CFIM/report_widget/: report_widget.py
src/psf_analysis_CFIM/tests/: fake_event.py  fake_image.py  fake_layer_list.py  fake_viewer.py  test_image_manager.py
