[metadata]
name = napari_psf_analysis_CFIM
description = A continuation of napari_psf_analyses, developed for CFIM - KU
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
url = https://github.com/YourUsername/napari-psf-analysis-cfim
project_urls =
   Bug Tracker = https://github.com/YourUsername/napari-psf-analysis-cfim/issues
   Documentation = https://github.com/YourUsername/napari-psf-analysis-cfim#README.md
   Source Code = https://github.com/YourUsername/napari-psf-analysis-cfim
   User Support = https://github.com/YourUsername/napari-psf-analysis-cfim/issues

[options]
packages = find:
install_requires =
    bfio
    matplotlib < 3.9
    matplotlib-scalebar
    napari
    numpy
    pandas
    scikit-image
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_psf_analysis = napari_psf_analysis:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
napari_psf_analysis = napari.yaml

[pydocstyle]
ignore = D100, D213, D413
