[metadata]
name = napari_psf_analysis_CFIM
description = A continuation of napari_psf_analyses, developed for CFIM - KU
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus L. Bille
author_email = Markus@bille.dk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
url = https://github.com/MaxusTheOne/napari-psf-analysis-CFIM-edition
project_urls =
   Bug Tracker = https://github.com/MaxusTheOne/napari-psf-analysis-CFIM-edition/issues
   Documentation = https://github.com/MaxusTheOne/napari-psf-analysis-CFIM-edition#README.md
   Source Code = https://github.com/MaxusTheOne/napari-psf-analysis-CFIM-edition
   User Support = https://github.com/MaxusTheOne/napari-psf-analysis-CFIM-edition/issues

[options]
packages = find:
install_requires =
    aicsimageio
    aicspylibczi
    bfio
    magicgui
    matplotlib < 3.9
    matplotlib-inline
    matplotlib-scalebar
    napari[all]
    numpy >= 1.26, < 2.0
    pandas
    pydantic
    PyYAML
    QtPy
    scipy

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_psf_analysis_CFIM = napari_psf_analysis_CFIM:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
napari_psf_analysis_CFIM = napari.yaml

[pydocstyle]
ignore = D100, D213, D413
